--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@
 
     </head>
     <body>
-            <!--Sidebar section-->
+        <!--All Content Goes Here-->
         <div id="all-contents">
+            <nav id="nav-ul">
+                <h1>Tyler's Glorious website</h1>
+                <ul> 
+                    <li class="nav-li"><a href="index.html"> Home</a></li>
+                    <li class="nav-li"><a href="portfolio.html"> Portfolio</a></li>
+                </ul>
+            </nav>
+
+            <main>
+            <!--Sidebar-->
             <div class="sidebar">
-                <nav id="nav-ul">
-                    <h1>Tyler's Glorious website</h1>
-                    <ul> 
-                        <li class="nav-li"><a href="index.html"> Home</a></li>
-                        <li class="nav-li"><a href="portfolio.html"> Portfolio</a></li>
-                    </ul>
-                </nav>
+                <img class="sidebar-img" src="https://media.tenor.com/8JhcC4OtwC8AAAAM/hatsune-miku-dance.gif">
             </div>
 
             <!--Content section-->
-            <main>
             <div class="content">
-                <img class="sidebar-img" src="https://media.tenor.com/8JhcC4OtwC8AAAAM/hatsune-miku-dance.gif">  
                 <h2>Tyler Magee</h2>
                 <p>Student at East ascension highschool</p>
                 <!--Interest section-->
