--- a/projects/platformer/index.html
+++ b/projects/platformer/index.html
@@ -15,6 +15,7 @@
     <img id="cannon" src="images/cannon.png" />
     <img id="player" src="images/halle.png" />
     <img id="projectile" src="images/projectile.png" />
+    <img id="ULTRAKILL" src="images/ULTRAKILL.jpg" />
     <img src="https://upload.wikimedia.org/wikipedia/commons/b/bd/Test.svg" />
   </body>
 </html>
