add bouncing box

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -66,7 +66,7 @@
 			//////////////////////////////////////////////////////////////////
 
 			// TODO 2 - Variable declarations 
-
+			var positionX = 0, score = 0, speed = 10
 
 
 			/* 
@@ -75,17 +75,34 @@
 			turn it around! 
 			*/
 			function update() {
+				if (positionX > boardWidth){
+					speed *= -1;
+				}
+
+				if (positionX < 0){
+					speed *= -1
+				}
 
 
+				positionX += speed;
+				moveBoxTo(positionX);
+				changeBoxText(score);
 			};
-
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
 			it should increase the points total, increase the speed, and move the box to
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-
+				positionX = 0
+				score += 1
+				if (speed > 0){
+					speed += 3
+				};
+				
+				if (speed < 0){
+					speed -= 3
+				};
 
 			};
 
