--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             </ul>
           </div>
         </div>
+        <img class= "cornerImage" src="">
+        <img class= "cornerImage2" src="">
+
       </main>
     </div>
   </body>
