--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -1,117 +1,134 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Bouncing Box</title>
+    <script src="jquery.min.js"></script>
+    <style>
+      .box {
+        width: 70px;
+        height: 70px;
+		    background-image: url(Doki_Doki_Literature_Club_Logo.webp);
+		    background-size: 70px,70px;
+        font-size: 300%;
+        text-align:center;
+        user-select: none;
+        display: block;
+        position: absolute;
+        top: 100px;
+        /* Change me! */
+        left: 0px;
+      }
 
-<head>
-	<meta charset="utf-8">
-	<title>Bouncing Box</title>
-	<script src="jquery.min.js"></script>
-	<style>
-		.box {
-			width: 70px;
-			height: 70px;
-			background-color: teal;
-			font-size: 300%;
-			text-align: center;
-			user-select: none;
-			display: block;
-			position: absolute;
-			top: 100px;
-			/* Change me! */
-			left: 0px;
+      .board {
+		    background-position: center ;
+        background-position-y: 300px;
+        background-repeat: no-repeat;
+        background-image: url(Sayori_Sticker_Distrait.webp);
+        height: 100vh;
+      }
+
+
+
+    </style>
+    <!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
+  </head>
+
+  <body class="board">
+    <!-- HTML for the box -->
+    <div class="box">?</div>
+
+    <script>
+      (function () {
+        "use strict";
+        /* global jQuery */
+
+        //////////////////////////////////////////////////////////////////
+        /////////////////// SETUP DO NOT DELETE //////////////////////////
+        //////////////////////////////////////////////////////////////////
+
+        var box = jQuery(".box"); // reference to the HTML .box element
+        var board = jQuery(".board"); // reference to the HTML .board element
+        var boardWidth = board.width(); // the maximum X-Coordinate of the screen
+
+        // Every 50 milliseconds, call the update Function (see below)
+        setInterval(update, 50);
+
+        // Every time the box is clicked, call the handleBoxClick Function (see below)
+        box.on("click", handleBoxClick);
+
+        // moves the Box to a new position on the screen along the X-Axis
+        function moveBoxTo(newPositionX) {
+          box.css("left", newPositionX);
+        }
+
+        // changes the text displayed on the Box
+        function changeBoxText(newText) {
+          box.text(newText);
+        }
+
+        //////////////////////////////////////////////////////////////////
+        /////////////////// YOUR CODE BELOW HERE /////////////////////////
+        //////////////////////////////////////////////////////////////////
+
+        // TODO 2 - Variable declarations
+		var backgroundPos = 300
+        var positionX = 0,
+          score = 0,
+          speed = 10;
+        function image() {
+          board.css("background-image", "url(Sayori_Sticker_Distrait.webp)")
+        }
+
+		function jump(yPos){
+			board.css("background-position-y", yPos)
 		}
 
-		.board {
-			height: 100vh;
-		}
-	</style>
-	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
-
-</head>
-
-<body class="board">
-	<!-- HTML for the box -->
-	<div class="box">?</div>
-
-	<script>
-		(function () {
-			'use strict'
-			/* global jQuery */
-
-			//////////////////////////////////////////////////////////////////
-			/////////////////// SETUP DO NOT DELETE //////////////////////////
-			//////////////////////////////////////////////////////////////////
-
-			var box = jQuery('.box');	// reference to the HTML .box element
-			var board = jQuery('.board');	// reference to the HTML .board element
-			var boardWidth = board.width();	// the maximum X-Coordinate of the screen
-
-			// Every 50 milliseconds, call the update Function (see below)
-			setInterval(update, 50);
-
-			// Every time the box is clicked, call the handleBoxClick Function (see below)
-			box.on('click', handleBoxClick);
-
-			// moves the Box to a new position on the screen along the X-Axis
-			function moveBoxTo(newPositionX) {
-				box.css("left", newPositionX);
-			}
-
-			// changes the text displayed on the Box
-			function changeBoxText(newText) {
-				box.text(newText);
-			}
-
-			//////////////////////////////////////////////////////////////////
-			/////////////////// YOUR CODE BELOW HERE /////////////////////////
-			//////////////////////////////////////////////////////////////////
-
-			// TODO 2 - Variable declarations 
-			var positionX = 0, score = 0, speed = 10
-
-
-			/* 
+        /* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
 			turn it around! 
 			*/
-			function update() {
-				if (positionX > boardWidth){
-					speed *= -1;
-				}
+        function update() {
+			if (backgroundPos < 300){
+				backgroundPos += 5
+			}	
+			
 
-				if (positionX < 0){
-					speed *= -1
-				}
+        	if (positionX > boardWidth - 60) {
+            speed *= -1;
+          	}
 
-
-				positionX += speed;
-				moveBoxTo(positionX);
-				changeBoxText(score);
-			};
-			/* 
+          	if (positionX < 0) {
+            speed *= -1;
+          	}
+			jump(backgroundPos)
+          	positionX += speed;
+          	moveBoxTo(positionX);
+          	changeBoxText(score);
+        	}
+        /* 
 			This Function will be called each time the box is clicked. Each time it is called,
 			it should increase the points total, increase the speed, and move the box to
 			the left side of the screen.
 			*/
-			function handleBoxClick() {
-				positionX = 0
-				score += 1
-				if (speed > 0){
-					speed += 3
-				};
-				
-				if (speed < 0){
-					speed -= 3
-				};
+        function handleBoxClick() {
+			    backgroundPos -= 20 
+          board.css("background-image", "url(Sayori_Sticker_Excited.webp)");
+          setTimeout(image, 1000);
 
-			};
+          positionX = 0;
+          score += 1;
 
+          if (speed > 0) {
+            speed += 3;
+          }
 
-
-
-
-		})();
-	</script>
-</body>
-
+          if (speed < 0) {
+            speed -= 3;
+          }
+        }
+      })();
+    </script>
+  </body>
 </html>
